include/bvgraph.h

/**
 * @brief compression flags for bvgraph
 * The enum records all the possible compression options for bvgraph.
 */

enum bvgraph_compression_flag_tag {
    BVGRAPH_FLAG_DELTA = 1,  ///< \delta coding
    BVGRAPH_FLAG_GAMMA = 2,  ///< \gamma coding
    BVGRAPH_FLAG_GOLOMB = 3, ///< Golomb coding 
    BVGRAPH_FLAG_SKEWED_GOLOMB = 4,  ///< skewed Golomb coding
    BVGRAPH_FLAG_ARITH = 5,  ///< arith coding
    BVGRAPH_FLAG_INTERP = 6, ///< interp coding
    BVGRAPH_FLAG_UNARY = 7,  ///< unary coding
    BVGRAPH_FLAG_ZETA = 8,   ///< \zeta coding
    BVGRAPH_FLAG_NIBBLE = 9, ///< variable-length nibble coding
};
/**
 * @brief bvgraph structure class
 * 
 * The main bvgraph structure represents a Boldi-Vigna graph file in memory. 
 * You should use this structure through its alias bvgraph instead.
 * @struct bvgraph_tag
 */
struct bvgraph_tag {
    // graph name information
    char filename[BVGRAPH_MAX_FILENAME_SIZE];
    unsigned int filenamelen;

    // graph size information
    int64_t n; ///< number of nodes
    int64_t m; ///< number of edges
    int64_t max_outd;   /// max out degree, max_outd = 0 if it is unknown

    // graph compression parameters
    int max_ref_count;
    int window_size;
    int min_interval_length;
    int zeta_k;

    enum bvgraph_compression_flag_tag outdegree_coding;
    enum bvgraph_compression_flag_tag block_coding;
    enum bvgraph_compression_flag_tag residual_coding;
    enum bvgraph_compression_flag_tag reference_coding;
    enum bvgraph_compression_flag_tag block_count_coding;
    enum bvgraph_compression_flag_tag offset_coding;

    // graph load information
    int offset_step; ///< -1: not store graph in memory; 0: store graph; 1: store offset

    unsigned char* memory;
    size_t memory_size;
    int memory_external;

    unsigned long long* offsets;
    int offsets_external;
};
/** 
 * @struct bvgraph_int_vector_tag
 * @brief iternal struct for bvgraph_int_vector
 * A simple integer vector type used in the iterator.
 * 
 * This type is internal, you should not use it.  I could have made the type
 * opaque and hidden it through internal linking and other such techniques.
 * Making it available, however, makes the code more transparent.  
 * (Okay, if you really must use it, just see how I use it, but no promises
 * that I won't change the interface.)
 */
struct bvgraph_int_vector_tag {
    uint64_t elements;
    int64_t* a;
};
/**
 * @struct bvgraph_iterator_tag
 * @brief implementation of bvgraph_iterator
 * A sequential access iterator for the bvgraph.
 *
 * Use this type through its alias bvgraph_iterator.
 *
 * A bvgraph_iterator gives a sequential view of a bvgraph by iterating
 * over its edges.
 */
struct bvgraph_iterator_tag {
    // variables that will be maintained for a public interface
    int64_t curr;   ///< current node id
    struct bvgraph_tag* g;
    bitfile bf;

    // implementation dependent variables
    int cyclic_buffer_size;
    int64_t* outd_cache;
    struct bvgraph_int_vector_tag* window;

    struct bvgraph_int_vector_tag successors; 
    int64_t curr_outd;

    // variables used inside the next function
    int64_t max_outd;
    struct bvgraph_int_vector_tag block, left, len, buf1, buf2;
};
/**
 * @struct successor
 * @brief successor struct
 */

struct successor{
    int64_t node;   ///< key
    int64_t* a;     ///< a list of successors
    int64_t d;      ///< number of degree
    int loaded;   ///< number of usage
};
/** 
 * @struct bvgraph_random_iterator_tag
 * @brief implementation of bvgraph_random_iterator
 * A random access iterator for the bvgraph.
 *
 * Use this type through its alias bvgraph_iterator.
 *
 * A bvgraph_iterator gives a sequential view of a bvgraph by iterating
 * over its edges.
 */
struct bvgraph_random_iterator_tag {
    // variables that will be maintained for a public interface
    int64_t curr;   ///< current node id
    struct bvgraph_tag* g;
    

    // implementation dependent variables

    // maintain two bitfiles, one for the the outdegrees, one for successors
    bitfile bf;        ///< bitfile for successors
    bitfile outd_bf;   ///< bitfile for outdegrees

    int offset_step;
    int64_t *offsets;

    int64_t* outd_cache; ///< a cache for outdegrees
    
    int64_t outd_cache_end; ///< the endpoint of the outdegree cache
    
    int64_t* offset_cache; ///< a cache for offests
    
    int64_t offset_cache_end; ///< the end of the offset cache
    
    int64_t cache_start;  ///< the start of both caches
    
    struct successor *successors_cache; ///< a cache for successors

    // a table to maintain the top k loaded nodes
    // int* top_loaded;

    int cyclic_buffer_size;
    struct bvgraph_int_vector_tag* window;

    struct bvgraph_int_vector_tag successors; 
    struct bvgraph_int_vector_tag ref_successors;
    int64_t curr_outd;

    // variables used inside the next function
    int64_t max_outd;
    struct bvgraph_int_vector_tag block, left, len, buf1, buf2;
};
/**
 * @struct bvgraph_parallel_iterators_tag
 * @brief implementation of bvgraph_parallel_iterators
 */

struct bvgraph_parallel_iterators_tag {
    int niters;
    int *nsteps;
    struct bvgraph_iterator_tag *iters;
    struct bvgraph_tag *g;
};
typedef struct bvgraph_tag bvgraph;
typedef struct bvgraph_iterator_tag bvgraph_iterator;
typedef struct bvgraph_random_iterator_tag bvgraph_random_iterator;
typedef struct bvgraph_int_vector_tag bvgraph_int_vector;
typedef struct bvgraph_parallel_iterators_tag bvgraph_parallel_iterators;
int bvgraph_load(bvgraph* g, const char *filename, unsigned int filenamelen,
                 int offset_step);
int bvgraph_load_external(bvgraph *g,
                          const char *filename, unsigned int filenamelen, 
                          int offset_step,
                          unsigned char *gmemory, size_t gmemsize,
                          unsigned long long* offsets, int offsetssize);
int bvgraph_close(bvgraph* g);
int bvgraph_nonzero_iterator(bvgraph* g, bvgraph_iterator *i);
int bvgraph_random_access_iterator(bvgraph* g, bvgraph_random_iterator *ri);
int bvgraph_outdegree(bvgraph *g, int64_t x, uint64_t *d);
int bvgraph_successors(bvgraph *g, int64_t x, int64_t** start, uint64_t *length);
int bvgraph_iterator_outedges(bvgraph_iterator* i, 
                              int64_t** start, uint64_t* len);
int bvgraph_iterator_next(bvgraph_iterator* i);
int bvgraph_iterator_valid(bvgraph_iterator* i);
int bvgraph_iterator_free(bvgraph_iterator *i);
int bvgraph_random_outdegree(bvgraph_random_iterator *ri, 
                             int64_t x, uint64_t *d);
int bvgraph_random_successors(bvgraph_random_iterator *ri, 
                             int64_t x, int64_t** start, uint64_t *length);
int bvgraph_random_free(bvgraph_random_iterator *ri);