julia/codegen/BVG_h.jl

    d756::Uint8
    d757::Uint8
    d758::Uint8
    d759::Uint8
    d760::Uint8
    d761::Uint8
    d762::Uint8
    d763::Uint8
    d764::Uint8
    d765::Uint8
    d766::Uint8
    d767::Uint8
    d768::Uint8
    d769::Uint8
    d770::Uint8
    d771::Uint8
    d772::Uint8
    d773::Uint8
    d774::Uint8
    d775::Uint8
    d776::Uint8
    d777::Uint8
    d778::Uint8
    d779::Uint8
    d780::Uint8
    d781::Uint8
    d782::Uint8
    d783::Uint8
    d784::Uint8
    d785::Uint8
    d786::Uint8
    d787::Uint8
    d788::Uint8
    d789::Uint8
    d790::Uint8
    d791::Uint8
    d792::Uint8
    d793::Uint8
    d794::Uint8
    d795::Uint8
    d796::Uint8
    d797::Uint8
    d798::Uint8
    d799::Uint8
    d800::Uint8
    d801::Uint8
    d802::Uint8
    d803::Uint8
    d804::Uint8
    d805::Uint8
    d806::Uint8
    d807::Uint8
    d808::Uint8
    d809::Uint8
    d810::Uint8
    d811::Uint8
    d812::Uint8
    d813::Uint8
    d814::Uint8
    d815::Uint8
    d816::Uint8
    d817::Uint8
    d818::Uint8
    d819::Uint8
    d820::Uint8
    d821::Uint8
    d822::Uint8
    d823::Uint8
    d824::Uint8
    d825::Uint8
    d826::Uint8
    d827::Uint8
    d828::Uint8
    d829::Uint8
    d830::Uint8
    d831::Uint8
    d832::Uint8
    d833::Uint8
    d834::Uint8
    d835::Uint8
    d836::Uint8
    d837::Uint8
    d838::Uint8
    d839::Uint8
    d840::Uint8
    d841::Uint8
    d842::Uint8
    d843::Uint8
    d844::Uint8
    d845::Uint8
    d846::Uint8
    d847::Uint8
    d848::Uint8
    d849::Uint8
    d850::Uint8
    d851::Uint8
    d852::Uint8
    d853::Uint8
    d854::Uint8
    d855::Uint8
    d856::Uint8
    d857::Uint8
    d858::Uint8
    d859::Uint8
    d860::Uint8
    d861::Uint8
    d862::Uint8
    d863::Uint8
    d864::Uint8
    d865::Uint8
    d866::Uint8
    d867::Uint8
    d868::Uint8
    d869::Uint8
    d870::Uint8
    d871::Uint8
    d872::Uint8
    d873::Uint8
    d874::Uint8
    d875::Uint8
    d876::Uint8
    d877::Uint8
    d878::Uint8
    d879::Uint8
    d880::Uint8
    d881::Uint8
    d882::Uint8
    d883::Uint8
    d884::Uint8
    d885::Uint8
    d886::Uint8
    d887::Uint8
    d888::Uint8
    d889::Uint8
    d890::Uint8
    d891::Uint8
    d892::Uint8
    d893::Uint8
    d894::Uint8
    d895::Uint8
    d896::Uint8
    d897::Uint8
    d898::Uint8
    d899::Uint8
    d900::Uint8
    d901::Uint8
    d902::Uint8
    d903::Uint8
    d904::Uint8
    d905::Uint8
    d906::Uint8
    d907::Uint8
    d908::Uint8
    d909::Uint8
    d910::Uint8
    d911::Uint8
    d912::Uint8
    d913::Uint8
    d914::Uint8
    d915::Uint8
    d916::Uint8
    d917::Uint8
    d918::Uint8
    d919::Uint8
    d920::Uint8
    d921::Uint8
    d922::Uint8
    d923::Uint8
    d924::Uint8
    d925::Uint8
    d926::Uint8
    d927::Uint8
    d928::Uint8
    d929::Uint8
    d930::Uint8
    d931::Uint8
    d932::Uint8
    d933::Uint8
    d934::Uint8
    d935::Uint8
    d936::Uint8
    d937::Uint8
    d938::Uint8
    d939::Uint8
    d940::Uint8
    d941::Uint8
    d942::Uint8
    d943::Uint8
    d944::Uint8
    d945::Uint8
    d946::Uint8
    d947::Uint8
    d948::Uint8
    d949::Uint8
    d950::Uint8
    d951::Uint8
    d952::Uint8
    d953::Uint8
    d954::Uint8
    d955::Uint8
    d956::Uint8
    d957::Uint8
    d958::Uint8
    d959::Uint8
    d960::Uint8
    d961::Uint8
    d962::Uint8
    d963::Uint8
    d964::Uint8
    d965::Uint8
    d966::Uint8
    d967::Uint8
    d968::Uint8
    d969::Uint8
    d970::Uint8
    d971::Uint8
    d972::Uint8
    d973::Uint8
    d974::Uint8
    d975::Uint8
    d976::Uint8
    d977::Uint8
    d978::Uint8
    d979::Uint8
    d980::Uint8
    d981::Uint8
    d982::Uint8
    d983::Uint8
    d984::Uint8
    d985::Uint8
    d986::Uint8
    d987::Uint8
    d988::Uint8
    d989::Uint8
    d990::Uint8
    d991::Uint8
    d992::Uint8
    d993::Uint8
    d994::Uint8
    d995::Uint8
    d996::Uint8
    d997::Uint8
    d998::Uint8
    d999::Uint8
    d1000::Uint8
    d1001::Uint8
    d1002::Uint8
    d1003::Uint8
    d1004::Uint8
    d1005::Uint8
    d1006::Uint8
    d1007::Uint8
    d1008::Uint8
    d1009::Uint8
    d1010::Uint8
    d1011::Uint8
    d1012::Uint8
    d1013::Uint8
    d1014::Uint8
    d1015::Uint8
    d1016::Uint8
    d1017::Uint8
    d1018::Uint8
    d1019::Uint8
    d1020::Uint8
    d1021::Uint8
    d1022::Uint8
    d1023::Uint8
    d1024::Uint8
end

zero(::Type{Array_1024_Uint8}) = begin  # /home/dgleich/.julia/v0.4/Clang/src/wrap_c.jl, line 264:
        Array_1024_Uint8(fill(zero(Uint8),1024)...)
    end

type bvgraph_tag
    filename::Array_1024_Uint8
    filenamelen::Uint32
    n::Int64
    m::Int64
    max_outd::Int64
    max_ref_count::Cint
    window_size::Cint
    min_interval_length::Cint
    zeta_k::Cint
    outdegree_coding::bvgraph_compression_flag_tag
    block_coding::bvgraph_compression_flag_tag
    residual_coding::bvgraph_compression_flag_tag
    reference_coding::bvgraph_compression_flag_tag
    block_count_coding::bvgraph_compression_flag_tag
    offset_coding::bvgraph_compression_flag_tag
    offset_step::Cint
    memory::Ptr{Cuchar}
    memory_size::Csize_t
    memory_external::Cint
    offsets::Ptr{Culonglong}
    offsets_external::Cint
    
    bvgraph_tag() = new(zero(Array_1024_Uint8),0,0,0,0,0,0,0,0,0,0,0,0,0,0,C_NULL,0,0,C_NULL,0)
end

type bvgraph_int_vector_tag
    elements::UInt64
    a::Ptr{Int64}
    
    bvgraph_int_vector_tag() = new(0,C_NULL)
end

type bvgraph_iterator_tag
    curr::Int64
    g::Ptr{bvgraph_tag}
    bf::bitfile
    cyclic_buffer_size::Cint
    outd_cache::Ptr{Int64}
    window::Ptr{bvgraph_int_vector_tag}
    successors::bvgraph_int_vector_tag
    curr_outd::Int64
    max_outd::Int64
    block::bvgraph_int_vector_tag
    left::bvgraph_int_vector_tag
    len::bvgraph_int_vector_tag
    buf1::bvgraph_int_vector_tag
    buf2::bvgraph_int_vector_tag
    
    bvgraph_iterator_tag = new(0,C_NULL,bitfile(),
end

type successor
    node::Int64
    a::Ptr{Int64}
    d::Int64
    loaded::Cint
end

type bvgraph_random_iterator_tag
    curr::Int64
    g::Ptr{bvgraph_tag}
    bf::bitfile
    outd_bf::bitfile
    offset_step::Cint
    offsets::Ptr{Int64}
    outd_cache::Ptr{Int64}
    outd_cache_end::Int64
    offset_cache::Ptr{Int64}
    offset_cache_end::Int64
    cache_start::Int64
    successors_cache::Ptr{successor}
    cyclic_buffer_size::Cint
    window::Ptr{bvgraph_int_vector_tag}
    successors::bvgraph_int_vector_tag
    ref_successors::bvgraph_int_vector_tag
    curr_outd::Int64
    max_outd::Int64
    block::bvgraph_int_vector_tag
    left::bvgraph_int_vector_tag
    len::bvgraph_int_vector_tag
    buf1::bvgraph_int_vector_tag
    buf2::bvgraph_int_vector_tag
end

type bvgraph_parallel_iterators_tag
    niters::Cint
    nsteps::Ptr{Cint}
    iters::Ptr{bvgraph_iterator_tag}
    g::Ptr{bvgraph_tag}
end

typealias bvgraph bvgraph_tag
typealias bvgraph_iterator bvgraph_iterator_tag
typealias bvgraph_random_iterator bvgraph_random_iterator_tag
typealias bvgraph_int_vector bvgraph_int_vector_tag
typealias bvgraph_parallel_iterators bvgraph_parallel_iterators_tag

const libbvg = "libbvg"

typealias FILE Void

function bitfile_open(f::Ptr{FILE},bf::bitfile)
    ccall((:bitfile_open,libbvg),Cint,(Ptr{FILE},Ptr{bitfile}),f,&bf)
end

function bitfile_open_filename(filename::AbstractString,bf::bitfile)
    ccall((:bitfile_open_filename,libbvg),Cint,(Ptr{UInt8},Ptr{bitfile}),filename,&bf)
end


function bitfile_map(mem::Ptr{Cuchar},len::Csize_t,bf::Ptr{bitfile})
    ccall((:bitfile_map,libbvg),Cint,(Ptr{Cuchar},Csize_t,Ptr{bitfile}),mem,len,bf)
end

function bitfile_close(bf::bitfile)
    ccall((:bitfile_close,libbvg),Cint,(Ptr{bitfile},),&bf)
end

function bitfile_flush(bf::Ptr{bitfile})
    ccall((:bitfile_flush,libbvg),Cint,(Ptr{bitfile},),bf)
end

function bitfile_eof(bf::Ptr{bitfile})
    ccall((:bitfile_eof,libbvg),Cint,(Ptr{bitfile},),bf)
end

function bitfile_read_bit(bf::bitfile)
    ccall((:bitfile_read_bit,libbvg),Cint,(Ptr{bitfile},),&bf)
end

function bitfile_read_int(bf::Ptr{bitfile}, len::Cuint)
    ccall((:bitfile_read_int,libbvg),Int64,(Ptr{bitfile},Cuint), bf, len)
end

function bitfile_read_unary(bf::Ptr{bitfile})
    ccall((:bitfile_read_unary,libbvg),Cint,(Ptr{bitfile},),bf)
end

function bitfile_read_gamma(bf::Ptr{bitfile})
    ccall((:bitfile_read_gamma,libbvg),Cint,(Ptr{bitfile},), bf)
end

function bitfile_read_zeta(bf::Ptr{bitfile},k::Cint)
    ccall((:bitfile_read_zeta,libbvg),Cint,(Ptr{bitfile},Cint), bf, k)
end

function bitfile_read_nibble(bf::Ptr{bitfile})
    ccall((:bitfile_read_nibble,libbvg),Cint,(Ptr{bitfile},),bf)
end

function bitfile_tell(bf::Ptr{bitfile})
    ccall((:bitfile_tell,libbvg),Clonglong,(Ptr{bitfile},),bf)
end

function bitfile_position(bf::Ptr{bitfile},pos::Clonglong)
    ccall((:bitfile_position,libbvg),Cint,(Ptr{bitfile},Clonglong),bf,pos)
end

function bitfile_skip(bf::Ptr{bitfile},n::Clonglong)
    ccall((:bitfile_skip,libbvg),Clonglong,(Ptr{bitfile},Clonglong),bf,n)
end

function bitfile_skip_gammas(bf::Ptr{bitfile},n::Cint)
    ccall((:bitfile_skip_gammas,libbvg),Cint,(Ptr{bitfile},Cint),bf,n)
end

function bitfile_skip_deltas(bf::Ptr{bitfile},n::Cint)
    ccall((:bitfile_skip_deltas,libbvg),Cint,(Ptr{bitfile},Cint),bf,n)
end


function bvgraph_load(g::Ptr{bvgraph},filename::Ptr{Uint8},filenamelen::Uint32,offset_step::Cint)
    ccall((:bvgraph_load,libbvg),Cint,(Ptr{bvgraph},Ptr{Uint8},Uint32,Cint),g,filename,filenamelen,offset_step)
end

function bvgraph_load_external(g::Ptr{bvgraph},filename::Ptr{Uint8},filenamelen::Uint32,offset_step::Cint,gmemory::Ptr{Cuchar},gmemsize::Csize_t,offsets::Ptr{Culonglong},offsetssize::Cint)
    ccall((:bvgraph_load_external,libbvg),Cint,(Ptr{bvgraph},Ptr{Uint8},Uint32,Cint,Ptr{Cuchar},Csize_t,Ptr{Culonglong},Cint),g,filename,filenamelen,offset_step,gmemory,gmemsize,offsets,offsetssize)
end

function bvgraph_close(g::bvgraph)
    ccall((:bvgraph_close,libbvg),Cint,(Ptr{bvgraph},),&g)
end

function bvgraph_nonzero_iterator(g::Ptr{bvgraph},i::Ptr{bvgraph_iterator})
    ccall((:bvgraph_nonzero_iterator,libbvg),Cint,(Ptr{bvgraph},Ptr{bvgraph_iterator}),g,i)
end

function bvgraph_random_access_iterator(g::Ptr{bvgraph},ri::Ptr{bvgraph_random_iterator})
    ccall((:bvgraph_random_access_iterator,libbvg),Cint,(Ptr{bvgraph},Ptr{bvgraph_random_iterator}),g,ri)
end

function bvgraph_outdegree(g::Ptr{bvgraph},x::Cint,d::Ptr{Cint})
    ccall((:bvgraph_outdegree,libbvg),Cint,(Ptr{bvgraph},Cint,Ptr{Cint}),g,x,d)
end

function bvgraph_successors(g::Ptr{bvgraph},x::Cint,start::Ptr{Ptr{Cint}},length::Ptr{Cint})
    ccall((:bvgraph_successors,libbvg),Cint,(Ptr{bvgraph},Cint,Ptr{Ptr{Cint}},Ptr{Cint}),g,x,start,length)
end

function bvgraph_iterator_outedges(i::Ptr{bvgraph_iterator},start::Ptr{Ptr{Cint}},len::Ptr{Cint})
    ccall((:bvgraph_iterator_outedges,libbvg),Cint,(Ptr{bvgraph_iterator},Ptr{Ptr{Cint}},Ptr{Cint}),i,start,len)
end

function bvgraph_iterator_next(i::Ptr{bvgraph_iterator})
    ccall((:bvgraph_iterator_next,libbvg),Cint,(Ptr{bvgraph_iterator},),i)
end

function bvgraph_iterator_valid(i::Ptr{bvgraph_iterator})
    ccall((:bvgraph_iterator_valid,libbvg),Cint,(Ptr{bvgraph_iterator},),i)
end

function bvgraph_iterator_free(i::Ptr{bvgraph_iterator})
    ccall((:bvgraph_iterator_free,libbvg),Cint,(Ptr{bvgraph_iterator},),i)
end

function bvgraph_random_outdegree(ri::Ptr{bvgraph_random_iterator},x::Cint,d::Ptr{Cint})
    ccall((:bvgraph_random_outdegree,libbvg),Cint,(Ptr{bvgraph_random_iterator},Cint,Ptr{Cint}),ri,x,d)
end

function bvgraph_random_successors(ri::Ptr{bvgraph_random_iterator},x::Cint,start::Ptr{Ptr{Cint}},length::Ptr{Cint})
    ccall((:bvgraph_random_successors,libbvg),Cint,(Ptr{bvgraph_random_iterator},Cint,Ptr{Ptr{Cint}},Ptr{Cint}),ri,x,start,length)
end

function bvgraph_random_free(ri::Ptr{bvgraph_random_iterator})
    ccall((:bvgraph_random_free,libbvg),Cint,(Ptr{bvgraph_random_iterator},),ri)
end
